--- a/style.css
+++ b/style.css
@@ -55,3 +55,11 @@
   top: 120px; /*Controls where TOC stops when sticky */
   width: 100% !important;
 }
+.list-group-item {
+    color: #7b8a8b;
+    font-size: 16px;
+}
+/* Dropdown menu hover color */
+  .navbar-default .dropdown-menu>li>a:hover {
+    background-color: #202831f2;
+  }
